<resources>
    <string name="app_name">GSH - Helpdesk IT</string>
    <string name="title_activity_info_ticket">InfoTicket</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>

    <string name="searchticket">Rechercher un ticket</string>
    <string name="newticket">Créer un ticket</string>
    <string name="setting">Paramètres</string>
    <string name="about">À propos et FAQ</string>
    <string name="logout">Se déconnecter</string>
    <string name="profile">Mon profil</string>
    <string name="alter_attente">Mettre le ticket en attente</string>
    <string name="alter_resolu">Mettre le ticket en résolu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="new_ticket_notification_title_template">Nouveau ticket : %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_ticket_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Partager</string>
    <string name="action_reply">Reply</string>
    <string name="actualiserTicket">Actualiser la liste</string>
    <string name="retourAccueil">Retour à l\'accueil</string>
    <string name="descriptionbuttonticket">Accédez à l\'intégralité de vos tickets, et gérez-les en temps réel. Modifications, visualisations, notifications…</string>
    <string name="descriptionbuttonproject">Visualisez et ayez un controle total sur l\'ensemble de vos projets. Etat d\'avancement, délais, notifications…</string>
    <string name="descriptionbuttonrendement">Vérifiez votre rendement personnel en quelques secondes, et gérez vos performances, votre prime, vos statistiques…</string>
    <string name="no_connection">Pas d\'accès à internet</string>
    <string name="connection_success">Connexion internet établie !</string>
    <string name="retry">Réessayer</string>
    <string name="status">Etat…</string>
    <string name="external_permission_revoked">Impossible d\'accéder aux photos</string>
    <string name="changeprofilepicbutton">Changer</string>
    <string name="actors">Acteurs</string>
    <string name="basicinfo">Info de base</string>
    <string name="requester">Demandeur</string>
    <string name="observer">Observateur</string>
    <string name="category">Catégorie</string>
    <string name="dates">Dates</string>
    <string name="debutdate">Date de début</string>
    <string name="echeancedate">Date d\'échéance</string>
    <string name="cloturedate">Date de clôture</string>
    <string name="StatusAndSLA">État et SLA</string>
    <string name="etat">État</string>
    <string name="SLA">SLA</string>
    <string name="lieu">Lieu</string>
    <string name="content">Description</string>
    <string name="resolutiondate">Date de résolution</string>
    <string name="resolutiontime">Temps de traitement du ticket</string>
    <string name="displaytreatmentime">Afficher le temps de traitement</string>
    <string name="resolutionlatetime">Temps de résolution et de retard</string>
    <string name="pickmotiftext">Veuillez choisir un motif</string>
    <string name="displaylistmotiftext">Afficher la liste des motifs</string>
    <string name="appgoalquestion">Quel est le but de cette application?</string>
    <string name="appgoalanswer">Cette application a été conçue dans le but d’améliorer la visibilité de l’IT sur ses performances (selon sa participation Helpdesk et ses projets), et dans le but de faciliter la gestion de ses interventions.</string>
    <string name="networkquestion">Avec quel réseau travailler?</string>
    <string name="networkanswer">L’application fonctionne avec le réseau local du groupe ainsi qu’avec les réseaux Wi-Fi et 4G.</string>
    <string name="authquestion">Comment m’authentifier?</string>
    <string name="authanswer">Sur l’interface d’authentification, entrez votre email et mot de passe de votre session. L’authentification ne sera par la suite plus demandé, sauf dans le cas de déconnexion.</string>
    <string name="logoutquestion">Comment me déconnecter?</string>
    <string name="logoutlanswer">Sur l’interface d’accueil, glissez l’écran vers la droite afin d’afficher le panneau de navigation, tout en bas appuyez sur «Se déconnecter».</string>
    <string name="profilepicquestion">Comment changer ma photo de profil?</string>
    <string name="profilepicanswer">Sur l’interface d’accueil, glissez l’écran vers la droite afin d’afficher le panneau de navigation, appuyez sur «Profil» puis «Changer».</string>
    <string name="seeprofilequestion">Qui peut voir mon profil?</string>
    <string name="seeprofileanswer">Personne à part vous. Dans les prochaines versions, un classement de performances sera établi entre vous et vos homologues, vos photos de profils pourraient être inclus dans le classement.</string>
    <string name="majquestion">Dois-je télécharger les MAJ?</string>
    <string name="majanswer">Il est impératif de télécharger les mises à jour après leur sortie, afin de régler les bugs et avoir les nouvelles fonctionnalités. Ne désactivez surtout pas le téléchargement des MAJ automatiques sur votre téléphone (si vous devez le faire faites attention à bien télécharger les MAJ de l’app).</string>
    <string name="apppartsquestion">Quelles parties de l’application sont achevées?</string>
    <string name="apppartsanswer">Pour l’instant la partie Helpdesk est achevée, des réparations de bugs ou de nouvelles fonctionnalités viendront surement s’y ajouter.\nLes parties projets et interventions sont en cours d’implémentation.</string>
    <string name="appbugquestion">Que faire en cas de bug de l’application?</string>
    <string name="appbuganswer">Il est vivement conseillé d’envoyer un email à l’adresse suivante (adel.achour@groupe-hasnaoui.com) avec des explications relatifs au bug, afin que celui-ci soit réglé au plus vite.</string>

    <string name="copyright">© 2018 GSH Inc.\nDSI.\nAdel ACHOUR.</string>
    <string name="gotologin">Se reconnecter manuellement</string>
    <string name="createticket">Créer le ticket</string>
    <string name="tickettitlechart">Choisissez un titre court et compréhensible</string>
    <string name="categoryticketchart">Choisissez la catégorie adéquate au problème</string>
    <string name="typeticketchart">Est-ce une demande ou un incident?</string>
    <string name="contentticketchart">Décrivez votre problème</string>
    <string name="shareStat">Partager mes statistiques</string>
    <string name="pickpersontext">A qui voulez-vous envoyer votre rapport Helpdesk?</string>
    <string name="technician">Ingénieur</string>
    <string name="sender">Emetteur</string>
    <string name="messagetitle">Titre</string>
    <string name="date">Date</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="login_text">Vos tickets sont\nsont entre vos mains</string>
    <string name="access_app">Accédez à l\'application</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="login">Se connecter</string>

</resources>
