<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/utilisateur"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_newticket"
            android:icon="@drawable/ajouterticket"
            android:title="@string/newticket" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/chercherticket"
            android:title="@string/searchticket" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/setting"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>