<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="example.javatpoint.com.optionmenu.MainActivity">

    <item  android:id="@+id/itemStatTicket"
        android:title="Stats de mes tickets"
        android:icon="@drawable/graph"
        />

   <!-- <item  android:id="@+id/itemCreationTicket"
        android:title="@string/newticket"
        android:icon="@drawable/ajouterticket"
        /> -->

    <item  android:id="@+id/itemGoHome"
        android:title="@string/retourAccueil"
        android:icon="@drawable/ic_home_white_24dp"
        app:showAsAction="always"
        />

    <item  android:id="@+id/itemUpdateTicket"
        android:title="@string/actualiserTicket"
        android:icon="@drawable/ic_refresh_white_24dp"
        app:showAsAction="always"
        />

    <item  android:id="@+id/itemRechercheTicket"
        android:title="@string/searchticket"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always"
        />


</menu>