<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ITs.activity.CheckAuth"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/no_connection_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textColor="@color/grey_status"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"
            android:visibility="visible"/>

    </LinearLayout>

    <Button
        android:id="@+id/retry_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:text="@string/retry"
        android:textColor="@color/white"
        android:layout_above="@+id/goto_login"/>

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/goto_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:text="@string/gotologin"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>