<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dfdfdf"
    tools:context=".ITs.activity.SingleMessage">

    <!-- Big Boss Linear -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Header -->
        <androidx.cardview.widget.CardView
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_width="match_parent"
            app:cardBackgroundColor="@color/color_card_profile"
            android:layout_height="wrap_content"
            app:cardCornerRadius="6dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="Détail du message"
                    android:shadowColor="@color/text_shadow"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:textColor="@color/grey_status"
                    android:layout_marginBottom="15dp"
                    android:textSize="20dp" />



                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#aeaeae"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/sender"/>
                <TextView
                    android:id="@+id/nameSenderSingle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingEnd="7dp"
                    android:paddingStart="7dp"
                    android:text="KHADRAOUI Merouane"
                    android:textColor="#2f2f2f"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/emailSender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="0dp"
                    android:gravity="center"
                    android:paddingEnd="7dp"
                    android:paddingStart="7dp"
                    android:text="mkhadraoui@groupe-hasnaoui.com"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_width="match_parent"
            app:cardBackgroundColor="@color/color_card_profile"
            android:layout_height="wrap_content"
            app:cardCornerRadius="6dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/messagetitle"/>

                <TextView
                    android:id="@+id/titleMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:text="Titre du message"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp" />



                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#aeaeae"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/date"/>

                <TextView
                    android:id="@+id/dateMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="25/10/2019 14:15"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginBottom="5dp"
                    android:textSize="15sp" />



                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#aeaeae"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/content"/>

                <TextView
                    android:id="@+id/contentMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingEnd="7dp"
                    android:paddingStart="15dp"
                    android:text="@string/large_text"
                    android:layout_marginBottom="15dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>